--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,10 +6,8 @@ website:
   navbar:
     right:
       - about.qmd
-      - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+      - icon: linkedin
+        href: https://www.linkedin.com/in/swadhin-mondal-12084713/
 format:
   html:
     theme:
